[package]
name = "cargo-ensure-installed"
version = "0.2.1"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]
description = "Like cargo install but if you already have a suitable version, simply leaves it as-is."
repository = "https://github.com/illicitonion/cargo-ensure-installed"
readme = "README.md"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "illicitonion/cargo-ensure-installed" }

[dependencies]
getopts = "0.2"
semver = "0.9.0"
toml = "0.4"
